Submit problem set 1

--- a/_ZiyuShu_ps_set1.ipynb.ipynb
+++ b/_ZiyuShu_ps_set1.ipynb.ipynb
@@ -90,26 +90,67 @@
     "\n",
     "5. Make a change `solutions_for_question_2` and commit. The change should be adding your second favorite book.\n",
     "\n",
-    "3. Switch back to the `master` or `main` branch.\n",
+    "6. Switch back to the `master` or `main` branch.\n",
     "\n",
-    "4. Make a change `solutions_for_question_2` and commit. Add the book you want to read next. Make sure that change is to the same line as you change in step 5. Make sure the change differs from what you did in step two. \n",
+    "7. Make a change `solutions_for_question_2` and commit. Add the book you want to read next. Make sure that change is to the same line as you change in step 5. Make sure the change differs from what you did in step two. \n",
     "\n",
-    "5. Now merge the `new` and `master` branches.\n",
+    "8. Now merge the `new` and `master` branches.\n",
     "\n",
-    "6. Manually resolve the git conflict and then commit the resolved version. Be detailed on how you are solving the conflict\n",
+    "9. Manually resolve the git conflict and then commit the resolved version. Be detailed on how you are solving the conflict\n",
     "\n",
-    "7. Look at your git and describe with words the timeline of changes. "
+    "10. Look at your git and describe with words the timeline of changes. "
    ]
   },
   {
-   "cell_type": "code",
-   "execution_count": null,
+   "cell_type": "markdown",
    "id": "bcb93886",
    "metadata": {},
-   "outputs": [],
    "source": [
     "# Paste here all the commands you used to answer this questions. \n",
-    "# Use instructive commit messages, since we will look at those to grade your homework "
+    "# Use instructive commit messages, since we will look at those to grade your homework \n",
+    "\n",
+    "1. ziyu@Ziyus-MacBook-Air problem-set-01-Ziyu-Shu % vim solutions_for_question_2.txt\n",
+    "\n",
+    "2. ziyu@Ziyus-MacBook-Air problem-set-01-Ziyu-Shu % git add solutions_for_question_2.txt\n",
+    "\n",
+    "3. ziyu@Ziyus-MacBook-Air problem-set-01-Ziyu-Shu % git commit -m \"Add solutions_for_question_2.txt with my favorite book Macbeth\" \n",
+    "[main a822e2e] Add solutions_for_question_2.txt with my favorite book Macbeth\n",
+    " Committer: Ziyu Shu <ziyu@Ziyus-MacBook-Air.local>\n",
+    "\n",
+    "4. ziyu@Ziyus-MacBook-Air problem-set-01-Ziyu-Shu % git checkout -b wish_to\n",
+    "Switched to a new branch 'wish_to'\n",
+    "\n",
+    "5. ziyu@Ziyus-MacBook-Air problem-set-01-Ziyu-Shu % vim solutions_for_question_2.txt\n",
+    "\n",
+    "ziyu@Ziyus-MacBook-Air problem-set-01-Ziyu-Shu % git add solutions_for_question_2.txt\n",
+    "ziyu@Ziyus-MacBook-Air problem-set-01-Ziyu-Shu % git commit -m \"add second favorite book: As You Like It\"\n",
+    "[wish_to 07c6286] add second favorite book: As You Like It\n",
+    " Committer: Ziyu Shu <ziyu@Ziyus-MacBook-Air.local>\n",
+    "\n",
+    "6. ziyu@Ziyus-MacBook-Air problem-set-01-Ziyu-Shu % git checkout main\n",
+    "M\t.DS_Store\n",
+    "Switched to branch 'main'\n",
+    "\n",
+    "7. ziyu@Ziyus-MacBook-Air problem-set-01-Ziyu-Shu % vim solutions_for_question_2.txt\n",
+    "ziyu@Ziyus-MacBook-Air problem-set-01-Ziyu-Shu % git add solutions_for_question_2.txt\n",
+    "ziyu@Ziyus-MacBook-Air problem-set-01-Ziyu-Shu % git commit -m \"added next-to-read book\" \n",
+    "\n",
+    "8. ziyu@Ziyus-MacBook-Air problem-set-01-Ziyu-Shu % git merge wish_to\n",
+    "Auto-merging solutions_for_question_2.txt\n",
+    "CONFLICT (content): Merge conflict in solutions_for_question_2.txt\n",
+    "Automatic merge failed; fix conflicts and then commit the result.\n",
+    "\n",
+    "9. I just open the file \"solutions_for_question_2.txt\" and see the conflicted part marked. I removed the markers and the conflict part, only kept one version. Then I saved the file and came back to terminal.\n",
+    "\n",
+    "ziyu@Ziyus-MacBook-Air problem-set-01-Ziyu-Shu % git add solutions_for_question_2.txt\n",
+    "ziyu@Ziyus-MacBook-Air problem-set-01-Ziyu-Shu % git commit -m \"Resolve merge conflict of solutions_for_question_2.txt\" \n",
+    "[main 345c16f] Resolve merge conflict of solutions_for_question_2.txt\n",
+    " Committer: Ziyu Shu <ziyu@Ziyus-MacBook-Air.local>\n",
+    "\n",
+    "10. \n",
+    "(1) I used vim command to create the solutions_for_question_2.txt on my file, adding my favorite book, committing the file. \n",
+    "(2) Then I switched to the new branch named 'wish_to', adding my second favorite book in the txt file, then commited it.\n",
+    "(3) When I switched back to the main branch, I made another change in txt file adding the next to read book. But when I tried to merge the main and new branch, it threw an error of conflict merging. Then I manually deleted the conflict part in the text file. Eventually merged succussfully.\n"
    ]
   },
   {
@@ -129,13 +170,45 @@
    ]
   },
   {
-   "cell_type": "code",
-   "execution_count": null,
+   "cell_type": "markdown",
    "id": "6f9928a7",
    "metadata": {},
-   "outputs": [],
    "source": [
-    "# add your answers here"
+    "# add your answers here\n",
+    "1. What is the title of the news story?\n",
+    "- Trump is explaining exactly how wild and extreme his second term would be\n",
+    "\n",
+    "2. What changes were made to the news story in a later commit?\n",
+    "\n",
+    "- Deleted some desciptions and sentences.\n",
+    "- Added the url: https://www.cnn.com/2023/09/11/politics/trump-wild-rhetoric-2024/index.html\n",
+    "\n",
+    "3. Which book I am currently reading?\n",
+    "- Babel, or the Necessity of Violence: An Arcane History of the Oxford Translators' Revolution\n",
+    "\n",
+    "4. Which year did I read more books?\n",
+    "- 2021.\n",
+    "\n",
+    "5. Have you read any of the books I read in the past years? What is your favorite?\n",
+    "- Yes I have read the fire and blood by George R.R Martin! Game of thrones series are best.\n",
+    "\n",
+    "6. Why there are no information about the books in the main branch? Which commit did that happen?\n",
+    "- The Commit 7cde2f5 set things to zero and delete every infomations from the main branch.\n",
+    "\n",
+    "7. How many branches are still active? What is their difference?\n",
+    "- Four (all are still active). The main branch dosen't have any info. The updates-book-2025 and jb brnaches seem like the same? And the what_i_have_been_reading branch contains the most.\n",
+    "\n",
+    "8. Which dog picture did you find more cute?\n",
+    "- dog1.jpeg. I LOVE BEAGLE for their annoyingness.\n",
+    "\n",
+    "9. What is the commit hash number for the commit where the readme was changed to how you read it now?\n",
+    "- Commit 53b7fd8\n",
+    "\n",
+    "10. Who did inspire this particular exercise?\n",
+    "- This exercise is inspired by [Eric Dunford's repository](https://github.com/edunford/git-scavenger-hunt)\n",
+    "\n",
+    "11. And sorry, this was a bit old, so you can see the books I am \"currently\" reading are actually from 2023. Which book I am reading right now, for real?\n",
+    "- the trouble with peace"
    ]
   },
   {
